--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="faq_side">
-      <h1>Beginning Front End development in a nutshell</h1>
+      <h1>Basic Front End development FAQ in a nutshell</h1>
       <div class="faq_questions">
         <div class="slot">
           <div class="question">
