--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h4 class="question_title">Can one learn coding for free?</h4>
             <img src="./images/icon-arrow-down.svg" class="arrow_down">
           </div>
-          <div class="answer"><p>Indeed yes there are many sites like Youtube, Udemy, W3 schools, etc whic offer courses to learn coding for free.</p>
+          <div class="answer"><p>Indeed yes there are many sites like Youtube, Udemy, W3 schools, etc which offer courses to learn coding for free.</p>
           </div>
         </div>
       
@@ -54,7 +54,7 @@
           <h4 class="question_title">What to do after completing a course in the basic tools?</h4>
           <img src="./images/icon-arrow-down.svg" class="arrow_down">
         </div>
-        <div class="answer"><p>There are many more tools to learn even afterr the basic learning such as javascript libraries and back end languages such as Python and Java.</p>
+        <div class="answer"><p>There are many more tools to learn even after the basic learning such as javascript libraries and back end languages such as Python and Java.</p>
         </div>
       </div>
 
